Archive2/0b/a7ec853fced363/output
main.cpp: In function 'std::vector<int> doubleValues(const std::vector<int>&)':
main.cpp:9:24: error: no matching function for call to 'std::vector<int>::reserve()'
     new_values.reserve();
                        ^
main.cpp:9:24: note: candidate is:
In file included from /usr/include/c++/4.8/vector:69:0,
                 from main.cpp:1:
/usr/include/c++/4.8/bits/vector.tcc:65:5: note: void std::vector<_Tp, _Alloc>::reserve(std::vector<_Tp, _Alloc>::size_type) [with _Tp = int; _Alloc = std::allocator<int>; std::vector<_Tp, _Alloc>::size_type = long unsigned int]
     vector<_Tp, _Alloc>::
     ^
/usr/include/c++/4.8/bits/vector.tcc:65:5: note:   candidate expects 1 argument, 0 provided
